--- a/src/css/style.css
+++ b/src/css/style.css
@@ -446,16 +446,18 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
 }
 
-#real-our-services,
+#real-our-services{
+  background: #ffffff;
+}
 #real-press {
   background: #f4f4f4;
 }
 
 #real-our-services .box {
   padding: 30px;
-  background: #fff;
+  background: #f4f4f4;
   text-align: center;
-  color: #7f7f7f;
+  color: #000000;
   margin-bottom: 70px;
   position: relative;
 }
